@@ -1,5 +1,5 @@
 /**
- * Copyright © 2016-2025 The Thingsboard Authors
+ * Copyright © 2016-2026 The Thingsboard Authors
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -53,9 +53,6 @@ import static org.thingsboard.server.dao.model.ModelConstants.RELATION_TYPE_GROU
 import static org.thingsboard.server.dao.model.ModelConstants.RELATION_TYPE_PROPERTY;
 import static org.thingsboard.server.dao.model.ModelConstants.VERSION_COLUMN;
 
-/**
- * Created by Valerii Sosliuk on 5/29/2017.
- */
 @Slf4j
 @Component
 @SqlDao
@@ -260,9 +257,7 @@ public class JpaRelationDao extends JpaAbstractDaoListeningExecutorService imple
 
         if (!CollectionUtils.isEmpty(relationTypeGroups)) {
             sqlBuilder.append("AND relation_type_group IN (?");
-            for (int i = 1; i < relationTypeGroups.size(); i++) {
-                sqlBuilder.append(", ?");
-            }
+            sqlBuilder.append(", ?".repeat(Math.max(0, relationTypeGroups.size() - 1)));
             sqlBuilder.append(")");
             params.addAll(relationTypeGroups);
         }
@@ -289,8 +284,7 @@ public class JpaRelationDao extends JpaAbstractDaoListeningExecutorService imple
                     relation.setTypeGroup(RelationTypeGroup.valueOf((String) relationTypeGroup));
                     relation.setVersion((Long) version);
                     return relation;
-                })
-                .collect(Collectors.toList());
+                }).toList();
     }
 
     @Override
@@ -299,13 +293,16 @@ public class JpaRelationDao extends JpaAbstractDaoListeningExecutorService imple
     }
 
     @Override
-    public List<EntityRelation> findByRelationPathQuery(TenantId tenantId, EntityRelationPathQuery query) {
+    public List<EntityRelation> findByRelationPathQuery(TenantId tenantId, EntityRelationPathQuery query, int limit) {
         List<RelationPathLevel> levels = query.levels();
         if (levels == null || levels.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
+        }
+        if (limit <= 0) {
+            return List.of();
         }
         String sql = buildRelationPathSql(query);
-        Object[] params = buildRelationPathParams(query);
+        Object[] params = buildRelationPathParams(query, limit);
 
         log.trace("[{}] relation path query: {}", tenantId, sql);
 
@@ -330,7 +327,7 @@ public class JpaRelationDao extends JpaAbstractDaoListeningExecutorService imple
                 .collect(Collectors.toList());
     }
 
-    private Object[] buildRelationPathParams(EntityRelationPathQuery query) {
+    private Object[] buildRelationPathParams(EntityRelationPathQuery query, int limit) {
         final List<Object> params = new ArrayList<>();
         // seed
         params.add(query.rootEntityId().getId());
@@ -340,6 +337,10 @@ public class JpaRelationDao extends JpaAbstractDaoListeningExecutorService imple
         for (var lvl : query.levels()) {
             params.add(lvl.relationType());
         }
+
+        // limit
+        params.add(limit);
+
         return params.toArray();
     }
 
@@ -387,7 +388,8 @@ public class JpaRelationDao extends JpaAbstractDaoListeningExecutorService imple
                 .append("FROM ").append(RELATION_TABLE_NAME).append(" r\n")
                 .append("JOIN ").append(prevForLast).append(" p ON ").append(lastJoin).append("\n")
                 .append("WHERE r.relation_type_group = '").append(RelationTypeGroup.COMMON).append("'\n")
-                .append("  AND r.relation_type = ?");
+                .append("  AND r.relation_type = ?\n")
+                .append("LIMIT ?");
 
         return sb.toString();
     }
